my-yamls/namespaces-shield.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shield
  labels:
    env: marvel
