my-yamls/hello-pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: hello-pod
  labels:
    zone: prod
    version: v1
spec:
  containers:
    - name: hello-container
      image: nigelpoulton/k8sbook:1.0
      ports:
        - containerPort: 8080
