my-yamls/init-multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod-2
  labels:
    app: initializer
spec:
  containers:
    - name: web-ctr
      image: nigelpoulton/web-app:1.0
      ports:
        - containerPort: 8080
