my-yamls/deployment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-deploy-svc
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30001
    protocol: TCP
