my-yamls/initsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: k8sbook
spec:
  selector:
    app: initializer
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
