my-yamls/services-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: test-clusterip-svc
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
