my-yamls/sidecar-multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-git-sync-t1
  labels:
    app: sidecar
spec:
  containers:
  - name: ctr-web
    image: nginx
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/
  - name: ctr-sync
    image: k8s.gcr.io/git-sync:v3.1.6
    volumeMounts:
    - name: html
      mountPath: /tmp/git
  volumes:
  - name: html
    emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sidecar-svc
spec:
  selector:
    app: sidecar
  ports:
  - port: 80
  type: LoadBalancer
